# funds_alcryb

./: README.md  README_FUND.md  final.py  pyproject.toml
data/: dataset_groupgrab.csv
data_util/: load_data.py
reports/: check.xlsx  stability.xlsx
